[package]
name = "docpkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.7.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.147"
toml = "0.5.10"
fs_extra = "1.2.0"
log = "0.4"
pretty_env_logger = "0.4"
