[package]
name = "docpkg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.9", features = ["derive"] }
regex = "1.7.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_derive = "1.0.147"
toml = "0.7.3"
fs_extra = "1.3.0"
log = "0.4"
pretty_env_logger = "0.4"
io-lifetimes = "1.0.7"
rustix = "0.37.2"
relative-path = "1.8.0"
